--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -149,3 +149,9 @@ label{
     background-color: #f16252;
     border-color: red;
 }
+.fundoatv{
+    width: 300px;
+    height: 280px;
+    margin: 0 auto;
+    background-color: rgb(255, 255, 255);
+}
