--- a/CSS/estilo_flexbox.css
+++ b/CSS/estilo_flexbox.css
@@ -14,7 +14,7 @@
     border: 2px solid #000000;
     max-width: 400px;  /*limita o tamanho do elemento*/
     margin:0 auto;
-    display: flex; /*define o tamanho do elemento e o espaço entr eles*/
+    display: flex; /*define o tamanho do elemento e o espaço entre eles*/
     
 }
 
@@ -23,4 +23,70 @@
     margin: 5px;
     text-align: center;
     color: aliceblue;
+}
+.flex{
+    display: flex;
+    flex-direction: column;
+}
+.flex > div > img{
+    height: 60px;
+    width: 60;
+}
+.div_coluna{
+    height: 100px;
+    width: 100px;
+    background-color: aqua;
+}
+
+.secao{
+    display: flex;
+    flex-direction: row;
+    background-color: bisque;
+    gap: 10px;   /* coloca um espaço entre os elementos */
+    flex-wrap: wrap; /* Quebra os elementos para outra linha, caso não haja espaço suficiente */
+}
+.secao_imagem{
+    height: 150px;
+    width: 150px;
+}
+.alinhar-esquerda{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start; /* Alinha os elementos a esquerda*/
+    
+}
+.alinhar-centro{
+    display: flex;
+    flex-direction: row;
+    justify-content: center; /* Alinha os elementos ao centro */
+} 
+.alinhar-direita{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end; /* Alinha os elementos ao centro */
+} 
+.alinhar-entre{
+    display: flex;
+    justify-content: row;
+    justify-content: space-between; /* alinha os elementos nos cantos e ajusta ao centro*/
+}
+.alinhar-redor{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;  /* Alinha os elementos de acordo o espaço ao redor */
+}
+.alinhar-coluna{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    background-color: rgb(87, 55, 194);
+}
+.alinhar-itens-centro{
+    display: flex;
+    align-items: center;
+    background-color: rgb(109, 234, 193);
+    flex-direction: row;
+    height: 200px;
+    justify-content: space-between;
 }
