--- a/ATIVIDADES/atividade09/css/styles.css
+++ b/ATIVIDADES/atividade09/css/styles.css
@@ -7,7 +7,94 @@
     /* garante que padding e margin sejam incluidos nas dimensoes totais do elemento*/
     box-sizing: border-box;
 }
+body{
+    background-color:#211f1f;
+    font-family: 'Teko', sans-serif;
+    color: #e1d8d8;
+}
 .logo{
     font-family: Teko;
     font-size: 2rem;
+    background-color: rgb(0, 0, 0);
+}
+.cabecalho{
+    display: flex;
+    background-color: rgb(0, 0, 0);
+    opacity: 70%;
+    color: #e1d8d8;   
+    justify-content: center;
+    flex-direction: row;
+    height: 70px;
+}
+.menu{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 50px;
+    margin-left: 100px;
+    background-color: rgb(0, 0, 0);
+}
+ul > a{
+    text-decoration: none;
+    color: #e1d8d8;
+    opacity: 70%;
+    background-color: rgb(0, 0, 0);
+}
+.acessar{
+    display: flex;
+    justify-content:right;
+    text-decoration: none;
+    color: #e1d8d8;
+    background-color: black;
+    gap: 100px;
+    opacity: 70%;
+}
+.banner-cafe{
+    max-width: 1120px;
+    margin: auto;
+    transition: transform 2s ease;
+}
+.banner-cafe:hover{
+   
+    transform: scale(1.020);
+    box-shadow:  10px 0px 20px rgba(113, 101, 101, 0.5);
+}
+.banner-cafe > img{
+    width: 100%;
+    box-shadow: 10px 0px 20px rgba(0, 0, 0, 0.5);
+    border-radius: 2px;
+    opacity: 0.7;
+}
+.banner-novidades{
+    max-width: 1120px;
+    height: 60vh;
+    margin: auto;
+    padding: 0rem 2rem;
+    gap: 6rem;
+    display: flex;
+    justify-content: space-between;
+}
+hr{
+    border: 1px solid #873434;
+}
+.banner-conteudo{
+    /* organizamos o conteudo em coluna*/
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.banner-imagens{
+    /* Definir largura máxima */
+    max-width: 45%;
+    /* Exibir as imagens me 4 colunas */
+    column-count: 4;
+
+}
+.banner-imagens > figure > img{
+    width: 100%;
+    border-radius: 5px;
+}
+.banner-imagens > figure > img:hover{
+    transform: scale(1.040);
+    box-shadow:  10px 0px 20px rgba(113, 101, 101, 0.5);
 }
