--- a/ATIVIDADES/exe10_starbucks/css/styles.css
+++ b/ATIVIDADES/exe10_starbucks/css/styles.css
@@ -2,7 +2,8 @@
     margin: 0;
 }
 .topo{
-    background-color: rgb(230, 208, 208);
+    background-color: antiquewhite;
+    font-weight: bold;
     text-align: right;
     gap: 10px;
     margin-left: auto;
@@ -10,6 +11,10 @@
     align-items: flex-end;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     justify-content: space-between;
+}
+header > div > div > a:hover{
+    color: rgba(9, 168, 49, 0.87);
+    
 }
 .parte1{
     display: flex;
@@ -27,7 +32,8 @@
     margin-right: 10px;
 }
 .img_copo{
-    max-width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
 .img{
     width: 150px;
@@ -59,6 +65,48 @@ a{
     display: flex;
     max-height: 400px;
     text-align: center;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+}
+.textos{
+    font-weight: bold;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 20px;
+}
+button{
+    margin-top: 1.5rem;
+    background: none;
+    border-width: 1px;
+    border-radius: 50px;
+    border-style: solid;
+    box-shadow: none;
+    font-size: 1.4rem;
+    padding: 7px 16px;
+    transition: all 1.2s ease;
+}
+button:hover{
+    text-align: center;
+    scale: 0.85;
+    cursor: pointer;
+    background-color: rgb(159, 223, 159);
+}
+.rodape{
+    background-color: rgb(215, 221, 221);
+    margin: 20px;
+}
+.rodape-section ul {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none; /* Remove as bolinhas */
+    padding: 2px;
+
+}
+.rodape-section h3{
+    font-size: 1.5rem;
+    display: flex;
+}
+.img-rodape{
+    width: 120px;
+    height: 120px;
+    align-items: flex-start;
 }
